@@ -1,0 +1,33 @@
+% mod_webpresence
+{"Web Presence", "Prezince sol waibe"}.
+{"You need an x:data capable client to register presence", "Vos avoz mezåjhe d' on cliyint ki sopoite x:data po vs edjîstrer al prezince sol waibe"}.
+{"What features do you want to enable?", "Kénès fonccionålités voloz vs mete en alaedje?"}.
+{"URL Type", "Sôre di hårdêye"}.
+{"Jabber ID", "ID Jabber"}.
+{"Random ID", "ID a l' astcheyance"}.
+{"Select one at least", "Tchoezixhoz è pol moens ene"}.
+{"Output Type", "Sôre di rexhowe"}.
+{"Icon Theme", "Tinme po ls imådjetes"}.
+{"XML", "XML"}.
+{"JavaScript", "JavaScript"}.
+{"Text", "Tecse"}.
+{"Avatar", "Vizaedje"}.
+{"Resource", "Rissoûce"}.
+{"If you forget your RandomID, register again to receive this message.", "Si vos rovyîz vossse ID a l' astcheyance, redjîstrez vs cor on côp po rçure ci messaedje ci."}.
+{"To get a new RandomID, disable the option and register again.", "Po rçure on novea ID a l' astcheyance, dismetoz l' tchuze ey après redjîstrez vs cor on côp."}.
+{"Web Presence: ", "Prezince sol waibe: "}.
+{"registered", "edjîstré"}.
+{"You have registered: ", "Vos avoz edjîstré: "}.
+{"Use URLs like:", "Eployîz des hårdêyes come:"}.
+{"Example:", "Egzimpe:"}.
+{"unregistered", "disdjîstré"}.
+{"You have unregistered.", "Vos vs avoz disdjîstré."}.
+{"available", "disponibe"}.
+{"free for chat", "libe po berdeler"}.
+{"away", "evoye"}.
+{"extended away", "nén arinnåve"}.
+{"do not disturb", "èn nén disrindjî"}.
+{"unavailable", "nén disponibe"}.
+{"To publish your presence in this web you need a Jabber account in this Jabber server.", "Por vos eplaidî vosse prezince so cisse waibe ci i vs fåt on conte Jabber so ç' sierveu ci."}.
+{"Login with a Jabber client, open the Service Discovery and register in Web Presence.", "Elodjîz vs avou on cliyint Jabber et s' drovoz li «Discovraedje di siervices» eyet edjîstrez vs sol «Prezince sol waibe»"}.
+{"You will receive a message with further instructions.", "Vos riçuroz on messaedje avou pus d' instruccions."}.
